--- a/htmls/hortiFruti.html
+++ b/htmls/hortiFruti.html
@@ -32,7 +32,7 @@
                 <h1>HORTI - FRUTI</h1>
             </div>
 
-            <div id="cashEcarrinho">
+            <div>
                 <div id="cash_Setores">
                     <h2>R$0,00</h2>
                 </div>
@@ -150,6 +150,13 @@
         <div id="listaProdutos">
         </div> 
 
+        <br>
+
+        <div class="footer">
+            <p>© 2020 SDF</p>
+            <img src="https://www.arbyte.com.br/img/logo-arbyte.png">
+        </div>
+        
     </body>
 </html>
        
