--- a/htmls/setorDeBebidas.html
+++ b/htmls/setorDeBebidas.html
@@ -151,6 +151,13 @@
         <div id="listaProdutos">
         </div> 
 
+        <br>
+
+        <div class="footer">
+            <p>© 2020 SDF</p>
+            <img src="https://www.arbyte.com.br/img/logo-arbyte.png">
+        </div>
+
     </body>
 </html>
        
